--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
 <!-- 	<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script> -->
 	<!-- <script src="data.js"></script> -->
 	<script type="module" src="index.js"></script>
-	<script src="https://d3js.org/d3.v5.js"></script>
+	<!-- <script src="https://d3js.org/d3.v5.js"></script> -->
 	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<!-- <script src="https://unpkg.com/topojson-client@3"></script> -->
+	<script src="https://unpkg.com/topojson-client@3"></script>
 </body>
 </html>
