--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,27 @@
 <meta charset="utf-8">
 
 <body>
-	<!-- <link rel="stylesheet" href="styles.css"> -->
+	<div class="categories" style="background: black;
+							    color: white;
+							    text-align: center;
+							    padding-top: 50px;">
+		Number of city: <input style="width:50px; margin-bottom: 20px" type="text" value=""><br>
+		Number of generation: <input style="width:70px; margin-bottom: 20px" type="text" value=""><br>
+	</div>
+	<div style="background: black;
+							    color: white;
+							    text-align: center;">
+		Distance: <span class="result"></span> km
+	</div>
+	<div id="map"></div>
+	
 	<!-- <script type="text/javascript" src="algos.js"></script> -->
 <!-- 	<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script> -->
 	<!-- <script src="data.js"></script> -->
 	<script type="module" src="index.js"></script>
 	<!-- <script src="https://d3js.org/d3.v5.js"></script> -->
-	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="https://unpkg.com/topojson-client@3"></script>
+	<script src="https://d3js.org/d3.v5.js"></script>
+<!-- 	<script src="https://unpkg.com/topojson-client@3"></script>
+ -->
 </body>
-</html>
+</html>	
